@@ -432,11 +432,12 @@ extern int __libdw_visit_scopes (unsigned int depth,
 extern int __libdw_intern_expression (Dwarf *dbg,
 				      bool other_byte_order,
 				      unsigned int address_size,
+				      unsigned int ref_size,
 				      void **cache, const Dwarf_Block *block,
 				      bool cfap, bool valuep,
 				      Dwarf_Op **llbuf, size_t *listlen,
 				      int sec_index)
-  __nonnull_attribute__ (4, 5, 8, 9) internal_function;
+  __nonnull_attribute__ (5, 6, 9, 10) internal_function;
 
 
 /* Return error code of last failing function call.  This value is kept
